--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <!-- Internal CSS -->
         <link rel="stylesheet" href="./css/fontimport.css">
+        <link rel="stylesheet" href="./css/type.css">
         <link rel="stylesheet" href="./css/style.css">
         
         <!-- Font Importing -->
@@ -20,11 +21,22 @@
 
     <body>
         <header>
-          <h1>THE INDOOR FARMING PROJECT</h1>
+          <h1> 
+            <span>THE</span>
+            <span class="title--highlight">INDOOR FARMING</span>
+            <span>PROJECT</span>
+          </h1>
         </header>
-
         <main>
+          <h2>A Feasability Study</h2>
+          <p>We’re on a mission to create the first student-run indoor farm that sustainably supplies produce to campus dining.</p>
         </main>
+        <footer>
+          <div class="ticker">
+            <p class="ticker__element" id="_red">Indoor farming produces at least 9 times more yield than conventional farming.</p>
+            <p class="ticker__element" id="_green">In 2017, 10 Billion USD were invested in agricultural tech.</p>
+          </div>
+        </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="./js/script.js"></script>
